Test JDT release property